plugins {
    id 'clone-artifacts'
    id 'com.android.tools.bazel-prebuilt-support'
}

java {
    withJavadocJar()
    withSourcesJar()
}

jar {
    from 'NOTICE'
    from 'LICENSE'
}

sourcesJar {
    from 'NOTICE'
    from 'LICENSE'
    // Gradle 7.0 requires specifying this explicitly, and this value is what pre 7.0 versions did
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

project.plugins.withId("com.google.protobuf") {
    project.protobuf {
        generateProtoTasks {
            ofSourceSet('main').each { generateProtoTask ->
                project.sourceSets.main.java.srcDir(generateProtoTask)
                sourcesJar.dependsOn(generateProtoTask)
            }
        }
    }
}

repositories {
    maven { url = uri(rootProject.cloneArtifacts.repository) }
}

test {
    // todo: disable this for CI since we'll use the CI UI to do the report.
    reports.html.required = true
}

afterEvaluate {
    compileJava.options.annotationProcessorGeneratedSourcesDirectory project.
            layout.
            buildDirectory.
            dir("generated/src/main/annotationProcessor").
            get().
            asFile
}

sourceSets {
    main.resources.exclude '**/*.kt'
    test.resources.exclude '**/*.kt'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 11
}

tasks.withType(ProcessResources) {
    // Gradle 7.0 requires specifying this explicitly, and this value is what pre 7.0 versions did
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

// Unblock updating to java 17
// See https://docs.gradle.org/current/userguide/upgrading_version_7.html#changes_7.6
tasks.withType(Test).configureEach {
    jvmArgs([
        "--add-opens=java.base/java.lang=ALL-UNNAMED",
        "--add-opens=java.base/java.util=ALL-UNNAMED"
    ])
}

task disableTestFailures {
    doLast {
        tasks.withType(Test) {
            ignoreFailures = true
        }
    }
}

tasks.withType(JavaForkOptions) {
    // Prevent forked processes from stealing focus (on MacOS at least)
    jvmArgs '-Djava.awt.headless=true'
}
